# pynvel

./: .bumpversion.cfg  .gitattributes  .gitignore  .gitmodules  .hgignore  .mesonpy-native-file.ini  .project  .pydevproject  .travis.yml  CMakeLists.txt  MANIFEST.in  NVEL.pyt  README.md  _msys2-mingw64.bat  _msys2-tdm.bat  appveyor.yml  build.bat  build_exe.bat  build_notes.txt  cmd_mingw-w64.bat  config.bat  config.sh  environment.yml  gen_libpython.bat  getvoleq_ctypes.py  meson.build  mingw-gcc.specs.in  nvel.py  nvel_test.f90  nvelcommon.pxi  nvelcommon.py  pynvel.c  pynvel.pyx  pyproject.toml  readme.rst  setenv.bat  setup.cfg  setup.py  sources.txt  test_cnvel.py  (+1 more)
.github/workflows/: main.yml
VolumeLibrary/: .gitrepo  CMakeLists.txt  R10d2h.f  R8vol2.f  _sources.txt
misc/: nvel_test.f90  vollib_wrap.f90
pynvel/: .gitignore  .project  MANIFEST.in  __init__.py  __main__.py  _msys2-mingw-m64.bat  _pynvel.c  _pynvel.html  _pynvel.pyx  _version.py  _volinit2.c  _volinit2.pyx  _vollib.pxd  behres.py  cmd_mingw-w64.bat  environment.yml  foo.py  gen_libpython.bat  getvoleq_ctypes.py  meson.build  nvel.py  nvelcommon.html  nvelcommon.pxi  nvelcommon.py  pynvel.spec  pynvel.toml  pynvel_ctypes.py  pynvel_runner.py  readme.txt  requirements.txt  run_main.py  setup.cfg  setup.py  setup.py.in  volume_height.py
pynvel/arcgis/: NVEL Tools.tbx  NVEL.CalcTreeVolume.pyt.xml  NVEL.pyt.xml
pynvel/docs/: BHERE_Enck.xlsx  Makefile  building.rst  index.rst  make.bat  pynvel.rst  r6vol3.xlsx  readme.rst
pynvel/examples/: superace.py  treelist.csv  vollib_ctypes.py
pynvel/pynvel/: __init__.py.in  __main__.py  _pynvel.pyx  _volinit2.html  _volinit2.pyxbld  _vollib.pxd  nvelcommon.py  pynvel.cfg  test.py
pynvel/pynvel/docs/: Volume Libary Call List.doc  Volume_Equation_Table.doc  pynvel.rst
pynvel/pynvel/test/: test_scribner.py  test_vol_calc.py  test_voleq.py  volcalc_test.py
pynvel/pynvel/test/data/: F01FW2W202_bdft.txt
pynvel/test/: pynvel_test.cfg  test_cnvel.py  test_vol_calc.py  test_voleq.py  test_volinit.py  voleq_test.py
pynvel/test/data/: F01FW2W202_16ft.csv  F01FW2W202_cuft.txt  F01FW2W202_test.csv  nvel_validate.xlsx
pynvel/test/notebooks/: Untitled.ipynb  nvel_ctypes.ipynb
pynvel/test/notebooks/.ipynb_checkpoints/: nvel_ctypes-checkpoint.ipynb
python/: CMakeLists.txt  MANIFEST.in  environment.yml  gen_libpython.py  setup.cfg  setup.py  setup.py.in
python/pynvel/: __init__.py  __init__.py.in  __main__.py  _pynvel.html  _pynvel.pyx  _volinit2.pyx  _vollib.pxd  config.py  nvelcommon.html  nvelcommon.pxi  pynvel.cfg  pynvel_ctypes.py  volume_calculator.py
python/pynvel/arcgis/: NVEL.pyt
python/pynvel/docs/: NVEL DLL Instructions.docx  Volume_Equation_Table.doc  api.rst  conf.py  nvel.rst
python/pynvel/examples/: vollib_ctypes.py
python/pynvel/test/: test_voleq.py
python/pynvel/test/data/: F01FW2W202_validate.xlsx
vollib/: Blmtap.f  CMakeLists.txt  CalcDia.f  Doyal78.f  Mrules.f  PNWTARIF.F  R10d2h.f  R10d2h.f.bak  R8CLKCOEF.INC  R8CLKDIB.F  R8dib.f  R8init.f  R8vlist.f  R8vol.f  R8vol1.f  R8vol2.f  _sources.txt  blmvol.f  charmod.f  getvoleq.f  grossvol.f  mrules_mod.f  pmtProfile.f  profile.f  profile2.f  r9clark.f  r9clark_mar10.f  r9clarkdib.f  r9coeff_jan11.inc  r9coeff_mar10.inc  r9coeff_new.inc  r9coeff_old.inc  stump.f  vernum.f  volapss.f  voleqdef.f  volfor.fvvv  volinit.f  volinit2.f  volinput_mod.f  (+4 more)
