[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = [
  "numpy",
  "cython",
  "setuptools>=45",
  "setuptools_scm[toml]>=6.2",
  "wheel",
  "meson",
  "meson-python>=0.13.2",
#  "ninja"
  ]
build-backend = "mesonpy"

[project]
name = "pynvel"
description = "Python wrapper and extension package for the National Volume Estimator library."
authors = [
  {name="Tod Haren", email="tod.haren@gmail.com"},
  ]
license = {file="LICENSE.txt"}
readme = {file="README.md", content-type="text/markdown"}
keywords = ["Forest Modeling", "Forest Biometrics", "Tree Volume", "NVEL"]

dynamic = ["version"]

dependencies = [
  "numpy",
  "cython",
  "click",
  ]

[project.urls]
repository = "https://github.com/forest-modeling/PyNVEL"

[project.scripts]
pynvel = "pynvel.__main__:cli"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "post-release"
# version_scheme = "guess-next-dev"
write_to = "pynvel/_version.py"
