[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = [
  "numpy",
  "cython",
  "setuptools>=64",
  "setuptools_scm[toml]>=8",
  "wheel",
  "meson",
  "meson-python>=0.15",
  "ninja",
  "patchelf ; platform_system != 'Windows'", ## Only linux???
  ]
build-backend = "mesonpy"

[project]
name = "pynvel"
description = "Python wrapper and extension package for the National Volume Estimator library."
authors = [
  {name="Tod Haren", email="tod.haren@gmail.com"},
  ]
license = {file="LICENSE.txt"}
readme = {file="README.md", content-type="text/markdown"}
keywords = ["Forest Modeling", "Forest Biometrics", "Tree Volume", "NVEL"]

dynamic = ["version"]

dependencies = [
  "numpy",
  "cython",
  "click",
  ]

[project.urls]
repository = "https://github.com/forest-modeling/PyNVEL"

[project.scripts]
pynvel = "pynvel.__main__:cli"

[tool.setuptools]
packages = ["pynvel",]

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "post-release"
# version_scheme = "guess-next-dev"
version_file = "pynvel/_version.py"
